Update and rename 人狼ルール.html to jinrou-rule.html

--- a/jinrou-rule.html
+++ b/jinrou-rule.html
@@ -7,7 +7,7 @@
   <title>Clovership人狼 ルール説明</title>
 
   <!-- 外部CSSをリンク --> 
-  <link rel="stylesheet" href="人狼ルール.css" />
+  <link rel="stylesheet" href="jinrou-rule.css" />
 
   <!-- ファビコン（タブに表示される小さなアイコン） --> 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
@@ -95,5 +95,6 @@
   </main>
 
 </body> 
+
 
 </html>
