jinrou-rule.html

--- a/jinrou-rule.html
+++ b/jinrou-rule.html
@@ -61,22 +61,44 @@
 
     </section>
 
+    
     <!-- ルール詳細 -->
     <section id="rules">
       <h2>ルール詳細</h2>
-      <ul> 
-        <li>夜時間2分、うち狼の内通時間1分</li> 
-        <li>役職行動は全て専用DM、狼内通はvc使用</li> 
-        <li>占い初日ランダム白あり</li> 
-        <li>騎士は毎晩自分以外を1人護衛（連続護衛なし）</li> 
-        <li>初日の指定吊り進行あり</li> 
-        <li>通常投票30秒、決戦弁明＆遺言1分</li> 
-        <li>三角・四角投票禁止</li> 
-        <li>決戦投票で同数の場合は吊りなし</li> 
-        <li>最後にMVP投票あり</li> 
-      </ul> 
+
+      <!-- 夜時間 -->
+      <div class="rule-group">
+        <h3>🌙夜時間🌙</h3>
+        <ul>
+          <li>夜時間は2分（うち1分は人狼の内通時間）</li>
+          <li>役職行動は全て専用DMで実施（人狼内通はVC使用）</li>
+          <li>占い初日ランダム白あり</li>
+          <li>騎士は毎晩自分以外を1人護衛（連続護衛なし）</li>
+        </ul>
+      </div>
+
+      <!-- 昼議論 -->
+      <div class="rule-group">
+        <h3>☀️昼議論☀️</h3>
+        <ul>
+          <li>初日の指定吊り進行あり</li>
+          <li>ゲーム終了後にMVP投票あり</li>
+        </ul>
+      </div>
+
+      <!-- 投票時 -->
+      <div class="rule-group">
+        <h3>🗳投票時🗳</h3>
+        <ul>
+          <li>通常投票は30秒</li>
+          <li>三角・四角投票は禁止</li>
+          <li>決戦弁明・遺言は1分</li>
+          <li>決戦投票で同数の場合は吊りなし</li>
+        </ul>
+      </div>
     </section>
 
+    
     <!-- 時間配分 --> 
     <section id="time"> 
       <h2>議論時間</h2> 
@@ -98,3 +120,4 @@
 
 
 </html>
+
