jinrou-rule.html

--- a/jinrou-rule.html
+++ b/jinrou-rule.html
@@ -72,6 +72,7 @@
         <ul>
           <li>夜時間は2分（うち1分は人狼の内通時間）</li>
           <li>役職行動は全て専用DMで実施（人狼内通はVC使用）</li>
+          <li>人狼は「噛みなし」、「自噛み」の選択不可</li>
           <li>占い初日ランダム白あり</li>
           <li>騎士は毎晩自分以外を1人護衛（連続護衛なし）</li>
         </ul>
@@ -91,6 +92,8 @@
         <h3>🗳投票時🗳</h3>
         <ul>
           <li>通常投票は30秒</li>
+          <li>投票形式は自由投票とし、行きたい人から宣言をして投票を行う</li>
+          <li>長時間誰も投票を行わない場合は、GMがランダムで指名する</li>
           <li>三角・四角投票は禁止</li>
           <li>決戦弁明・遺言は1分</li>
           <li>決戦投票で同数の場合は吊りなし</li>
@@ -120,4 +123,5 @@
 
 
 </html>
+
 
